--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,106 @@
         continue.</strong
       >
     </noscript>
+
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+      <!--  ICONS  -->
+      <!--  Happy -->
+      <symbol id="happy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+        <circle style="fill: currentColor" cx="24" cy="24" r="19" />
+        <path
+          style="fill: #c62828"
+          d="M29,32c0,2.761-2.239,5-5,5s-5-2.239-5-5H29z"
+        />
+        <path
+          style="fill: none; stroke: #b76c09; stroke-width: 2"
+          d="M13,24c0,0,1.5-2,4-2s4,2,4,2"
+        />
+        <path
+          style="fill: none; stroke: #b76c09; stroke-width: 2"
+          d="M27,24c0,0,1.5-2,4-2s4,2,4,2"
+        />
+      </symbol>
+
+      <!--   Happy real -->
+      <symbol
+        id="happy-real"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 48 48"
+      >
+        <circle style="fill: currentColor" cx="24" cy="24" r="19" />
+        <circle style="fill: #6d4c41" cx="17" cy="23" r="4" />
+        <circle style="fill: #ffffff" cx="15.5" cy="21.5" r="1.5" />
+        <circle style="fill: #6d4c41" cx="31" cy="23" r="4" />
+        <circle style="fill: #ffffff" cx="29.5" cy="21.5" r="1.5" />
+        <path
+          fill="none"
+          stroke="#B76C09"
+          stroke-width="2"
+          d="M28,32c0,2.209-1.791,4-4,4s-4-1.791-4-4"
+        />
+      </symbol>
+
+      <!--   Neutral -->
+      <symbol
+        id="neutral"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 48 48"
+      >
+        <circle style="fill: currentColor" cx="24" cy="24" r="19" />
+        <circle style="fill: #6d4c41" cx="17" cy="23" r="4" />
+        <circle style="fill: #ffffff" cx="15.5" cy="21.5" r="1.5" />
+        <circle style="fill: #6d4c41" cx="31" cy="23" r="4" />
+        <circle style="fill: #ffffff" cx="29.5" cy="21.5" r="1.5" />
+        <line
+          style="fill: none; stroke: #b76c09; stroke-width: 2"
+          x1="19"
+          y1="34"
+          x2="29"
+          y2="34"
+        />
+      </symbol>
+
+      <!--  Sad   -->
+      <symbol id="sad" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+        <circle style="fill: currentColor" cx="24" cy="24" r="19" />
+        <circle style="fill: #6d4c41" cx="17" cy="23" r="4" />
+        <circle style="fill: #ffffff" cx="15.5" cy="21.5" r="1.5" />
+        <circle style="fill: #6d4c41" cx="31" cy="23" r="4" />
+        <circle style="fill: #ffffff" cx="29.5" cy="21.5" r="1.5" />
+        <path
+          style="fill: none; stroke: #b76c09; stroke-width: 2"
+          d="M28,36c0-2.209-1.791-4-4-4s-4,1.791-4,4"
+        />
+      </symbol>
+
+      <!--   Vomitted -->
+      <symbol
+        id="vomitted"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 48 48"
+      >
+        <circle style="fill: currentColor" cx="24" cy="24" r="19" />
+        <path
+          style="fill: none; stroke: #b76c09; stroke-width: 2"
+          d="M13,22c0,0,1.5,2,4,2s4-2,4-2"
+        />
+        <path
+          style="fill: none; stroke: #b76c09; stroke-width: 2"
+          d="M27,22c0,0,1.5,2,4,2s4-2,4-2"
+        />
+        <path
+          style="fill: #c62828"
+          d="M29,36c0-2.761-2.239-5-5-5s-5,2.239-5,5H29z"
+        />
+        <circle style="fill: #4caf50" cx="20" cy="45" r="1" />
+        <circle style="fill: #4caf50" cx="24" cy="47" r="1" />
+        <circle style="fill: #4caf50" cx="28" cy="44" r="1" />
+        <path
+          style="fill: #4caf50"
+          d="M19,36v9h2c0,0,0.004-1,1-1s1,1,1,1v2h2v-3c0,0-0.001-1,1-1s1,1,1,1l0,0h2v-8c0,0-1.042-2-5-2  S19,36,19,36z"
+        />
+      </symbol>
+    </svg>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
